FTP and SFTP Browser for Mac OS X
http://cyberduck.ch/

Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

2.3b1 (planned)
- External editor support

2.2
- Supporting folders with sticky/set-uid/set-gid bits (FTP)
- Updated Dutch localization
- Updated French localization

2.2b6
- Preliminary support for Windows, VMS and OS/2 file listings (FTP)
- Properly deleting symbolic links (FTP)
- Displaying link icons in browser
- Downloading files from FTP servers not supporting the SIZE command (FTP)
- Fixed a bug where overwritten files with SFTP got corrupted (Thanks to Jan!)
- Contextual Menu support
- Bug fixes

2.2b5
- Chinese (Traditional) Localization
- Korean Localization
- Passphrases for private key files are stored in the Keychain (SSH)
- Bookmark editor allows to specify the port number
- When a bookmark is edited, the properties are updated in the bookmark drawer instantly
- A confirmation dialog is displayed before deleting a bookmark
- A confirmation dialog is displayed when connecting to a new site in a browser still connected to another host
- Transcript messages are only shown in the corresponding browser
- Fixed a bug which caused the browser window to be 'frozen' after an upload
- Option to adjust the 'LIST' command sent (FTP)
- Fixed a bug which caused a crash when not connected to a network
- Updated application icon

2.2b4
- Fixed a bug that with some servers the permissions could not be modified (FTP)
- When addding a transfer to the queue it is highlighted
- Improved login process
- Updated Japanese localization

2.2b3
- Caching folder listings
- Auto-refresh the folder listing after uploading a file
- Sending 'LIST -a' to list directories (FTP)
- Fixed a bug where entries in the queue would be deleted too early

2.2b2
- Updated Japanese localization
- Updated French localization
- Updated Portuguese localization
- Updated Italian localization