@@ -8,11 +8,17 @@
 	<string>Cyberduck-2.2beta6.dmg</string>
 	<key>comment</key>
         <string>Changelog:
+2.2
+- Supporting folders with sticky/set-uid/set-gid bits (FTP)
+- Updated Dutch localization
+- Updated French localization
+- Minor performance improvements
+
 2.2b6
 - Preliminary support for Windows, VMS and OS/2 file listings (FTP)
-- Properly deleting symbolic links
+- Properly deleting symbolic links (FTP)
 - Displaying link icons in browser
-- Downloading files from FTP servers not supporting the SIZE command
+- Downloading files from FTP servers not supporting the SIZE command (FTP)
 - Fixed a bug where overwritten files with SFTP got corrupted (Thanks to Jan!)
 - Contextual Menu support
 - Bug fixes
@@ -20,19 +26,19 @@
 2.2b5
 - Chinese (Traditional) Localization
 - Korean Localization
-- Passphrases for private key files (SSH) are stored in the Keychain
+- Passphrases for private key files are stored in the Keychain (SSH)
 - Bookmark editor allows to specify the port number
 - When a bookmark is edited, the properties are updated in the bookmark drawer instantly
 - A confirmation dialog is displayed before deleting a bookmark
 - A confirmation dialog is displayed when connecting to a new site in a browser still connected to another host
 - Transcript messages are only shown in the corresponding browser
 - Fixed a bug which caused the browser window to be 'frozen' after an upload
-- Option to adjust the 'LIST' command sent using FTP
+- Option to adjust the 'LIST' command sent (FTP)
 - Fixed a bug which caused a crash when not connected to a network
 - Updated application icon
 
 2.2b4
-- Fixed a bug that with some FTP servers the permissions could not be modified
+- Fixed a bug that with some servers the permissions could not be modified (FTP)
 - When addding a transfer to the queue it is highlighted
 - Improved login process
 - Updated Japanese localization
@@ -40,7 +46,7 @@
 2.2b3
 - Caching folder listings
 - Auto-refresh the folder listing after uploading a file
-- Sending 'LIST -a' to list directories with FTP
+- Sending 'LIST -a' to list directories (FTP)
 - Fixed a bug where entries in the queue would be deleted too early
 
 2.2b2
@@ -67,8 +73,8 @@
 - Portuguese Localization
 - Spanish Localization
 - French Localization
-- Option to disable 'CHMOD' after upload
-- Option to disable sending the 'SYST' command
+- Option to disable 'CHMOD' after upload (FTP)
+- Option to disable sending the 'SYST' command (FTP)
 - When clicking the dock icon and now window is active, a new browser window is opened
 - Bookmarks can be rearranged
 - When login credentials aren't reasonable, ask before trying to login
